testdata/not_valid/key_not_uniq_nested.out
key_not_uniq_nested.kevs:4: error: parse: key 'x' is not unique for current table
