testdata/not_valid/key_not_uniq_nested.kevs
x = 42;
y = {
  x = 42;
  x = 23;
};
